Internal refactor of generate-scripts goal ; a single script generator base class with descendants for the three choices of OS. Adds "java.ext.dirs" JVM option for lib-ext, removing requirement to patch an installed JRE. Raised version number of pbl-mojo in POM.